--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
         releaseNotes = "Test Notes"
         serviceCredentialsFile = "$rootDir/compost-e2c91-1faf38cc5a87.json"
         groups = "QA"
-        apkPath = "$rootDir/app/build/outputs/apk/debug/"
+        apkPath = "$rootDir/app/build/outputs/apk/debug/app-debug.apk"
     }
 
     signingConfigs {
